--- a/Lab12/NonLinear.ipynb
+++ b/Lab12/NonLinear.ipynb
@@ -86,7 +86,7 @@
     "\n",
     "The weak form of the problem becomes, find $u \\in V := H^1_0(\\Omega)$\n",
     "$$\n",
-    "\\int_{\\Omega} \\nabla u \\nabla v + \\int_{\\Omega} u \\nabla \\cdot u v - \\int_{\\Omega} g v = 0 \\quad \\forall v \\in V \\Leftrightarrow f(u; v) := f_1(u; v) = 0 \\quad \\forall v \\in V\n",
+    "\\int_{\\Omega} \\nabla u \\nabla v + \\int_{\\Omega} u \\nabla \\cdot u v - \\int_{\\Omega} g v = 0 \\quad \\forall v \\in V \\Leftrightarrow f(u; v) := f_1(u; v) + f_2(u; v) + f_3(u; v) = 0 \\quad \\forall v \\in V\n",
     "$$\n",
     "\n",
     "Using Newton schema, we solve for each $k$ iteration the problem\n",
